Co-authored-by: BillyAnthonyB <BillyAnthonyB@users.noreply.github.com>

--- a/public/style.css
+++ b/public/style.css
@@ -321,6 +321,13 @@ div.descWhy {
 /* Diatas footer. button paket dan membership */
 
 
+/* FAQ FAQ FAQ FAQ FAQ ======================================================================================== */
+.accordion{
+    padding-top: 5vh;
+    padding-left: 25vw;
+    padding-right: 25vw;
+}
+
 
 
 
