--- a/public/style.css
+++ b/public/style.css
@@ -528,3 +528,39 @@ div.descWhy {
     border: 2px solid #18a4fc;
     transition: all 0.3s ease;
 }
+
+/*PAGE TENTANG KAMIIIII*/
+
+.judul-tentangkami {
+    padding-left: 3vw;
+}
+
+.judul-tentangkami h5{
+    padding-left: 4vw;
+    padding-right: 50vw;
+    text-align: justify;
+    font-size: 16px;
+}
+
+.judul-tentangkami h1{
+    font-weight: bold;
+    padding-left: 4vw;
+    padding-top: 2vw;
+}
+
+.button-tentangkami-FAQ{
+    display: inline-block;
+    background: #18a4fc;
+    color: #fff;
+    font-weight: bold;
+    font-size: 16px;
+    padding: 5px 15px;
+    margin-top: 20px;
+    border-radius: 6px;
+    border: 2px solid #18a4fc;
+    transition: all 0.3s ease;
+}
+
+.havemore a{
+    padding-left: 4vw;
+}
