--- a/public/style.css
+++ b/public/style.css
@@ -390,23 +390,26 @@ div.descWhy {
 }
 #PaketLaundry #Barisan1 #Paket1 #PaketKomplit #harga{
     display: flex;
+    align-items: center;
+    padding-top: 5vh;
 }
 #PaketLaundry #Barisan1 #Paket1 #PaketKomplit #harga h4{
     padding-left: 2vw;
-    padding-top: 5vh;
+    padding-right:2vw;
     font-family: Nunito;
     font-size: 20px;
 }
 #PaketLaundry #Barisan1 #Paket1 #PaketKomplit #harga #button{
-    display: inline-block;
+    height: 50px;
     background: #18a4fc;
     color: #fff;
     font-weight: bold;
-    font-size: 16px;
+    font-size: 20px;
     padding: 5px 2vh;
     border-radius: 6px;
     border: 2px solid #18a4fc;
     transition: all 0.3s ease;
+    cursor: pointer;
 }
 #PaketLaundry #Barisan1 #Paket2{
     display: flex;
@@ -429,25 +432,29 @@ div.descWhy {
 }
 #PaketLaundry #Barisan1 #Paket2 #PaketSepatu #harga{
     display: flex;
+    align-items: center;
+    padding-top: 5vh;
 }
 #PaketLaundry #Barisan1 #Paket2 #PaketSepatu #harga h4{
     padding-left: 2vw;
-    padding-top: 5vh;
+    padding-right:2vw;
     font-family: Nunito;
     font-size: 20px;
 }
 #PaketLaundry #Barisan1 #Paket2 #PaketSepatu #harga #button{
-    display: inline-block;
+    height: 50px;
     background: #18a4fc;
     color: #fff;
     font-weight: bold;
-    font-size: 16px;
+    font-size: 20px;
     padding: 5px 2vh;
     border-radius: 6px;
     border: 2px solid #18a4fc;
     transition: all 0.3s ease;
+    cursor: pointer;
 }
 #PaketLaundry #Barisan2{
+    padding-top: 5vh;
     display: flex;
 }
 #PaketLaundry #Barisan2 #Paket3{
@@ -471,23 +478,26 @@ div.descWhy {
 }
 #PaketLaundry #Barisan2 #Paket3 #PaketBed #harga{
     display: flex;
+    align-items: center;
+    padding-top: 5vh;
 }
 #PaketLaundry #Barisan2 #Paket3 #PaketBed #harga h4{
     padding-left: 2vw;
-    padding-top: 5vh;
+    padding-right:2vw;
     font-family: Nunito;
     font-size: 20px;
 }
 #PaketLaundry #Barisan2 #Paket3 #PaketBed #harga #button{
-    display: inline-block;
+    height: 50px;
     background: #18a4fc;
     color: #fff;
     font-weight: bold;
-    font-size: 16px;
+    font-size: 20px;
     padding: 5px 2vh;
     border-radius: 6px;
     border: 2px solid #18a4fc;
     transition: all 0.3s ease;
+    cursor: pointer;
 }
 #PaketLaundry #Barisan2 #Paket4{
     display: flex;
@@ -510,23 +520,26 @@ div.descWhy {
 }
 #PaketLaundry #Barisan2 #Paket4 #PaketFormal #harga{
     display: flex;
+    align-items: center;
+    padding-top: 5vh;
 }
 #PaketLaundry #Barisan2 #Paket4 #PaketFormal #harga h4{
     padding-left: 2vw;
-    padding-top: 5vh;
+    padding-right:2vw;
     font-family: Nunito;
     font-size: 20px;
 }
 #PaketLaundry #Barisan2 #Paket4 #PaketFormal #harga #button{
-    display: inline-block;
+    height: 50px;
     background: #18a4fc;
     color: #fff;
     font-weight: bold;
-    font-size: 16px;
+    font-size: 20px;
     padding: 5px 2vh;
     border-radius: 6px;
     border: 2px solid #18a4fc;
     transition: all 0.3s ease;
+    cursor: pointer;
 }
 
 /*PAGE TENTANG KAMI =======================================================================================*/
