--- a/public/style.css
+++ b/public/style.css
@@ -728,21 +728,48 @@ div.descWhy {
 #login{
     padding-top: 150px;
     display: flex;
-
 }
-#login #image{
-    width: 70px;
-    padding-left: 350px;
+#imageLogin img{
+    padding-left: 300px;
+    width: 90%;
 }
 
-#login .form-group{
-    padding-left: 25vw;
-    margin-top: 4vh;
+#login .form{
+    margin-top: 40vh;
 }
 
 #login .btn{
-    margin-left: 25vw;
-    margin-top: 3vh;
+    margin-left: 6.1vw;
+    padding: 0.375rem 3.75rem;
+}
+
+#login .box-login{
+    margin-top: 15vh;
+    margin-left: 7vw;
+}
+
+#login .col-sm-10{
+    padding-right: 10vw;
+}
+
+#login .form-control{
+    padding: 0.5vh;
+    padding-right: 6vw;
+    border: 2px solid #18a4fc;
+    border-radius: 0.6rem;
+}
+
+#login .col-form-label{
+    font-family: Nunito;
+    font-weight: bold;
+}
+button, input, optgroup, select, textarea {
+    font-family: Nunito;
+}
+#login .btn-primary{
+    background-color: #18a4fc;
+    font-weight: bold;
+    border-color: #18a4fc;
 }
 
 /* Sign Up =============================================================================================== */
@@ -751,7 +778,7 @@ div.descWhy {
     display: flex;
 }
 #recovery #image{
-    width: 70px;
+    width: 50px;
     padding-left: 350px;
 }
 
@@ -761,7 +788,7 @@ div.descWhy {
     display: flex;
 }
 #signup #image{
-    width: 70px;
+    width: 50px;
     padding-left: 350px;
 }
 
@@ -771,6 +798,42 @@ div.descWhy {
     display: flex;
 }
 #recoverysend #image{
-    width: 70px;
+    width: 50px;
     padding-left: 350px;
+}
+/* Requestsend =============================================================================================== */
+#requestsend{
+    padding-top: 120px;
+    display: flex;
+}
+#requestsend #paragraft h1{
+    padding-left: 130px;
+    font-size: 24px;
+    font-weight: bolder;
+}
+#requestsend #paragraft h2{
+    padding-left: 130px;
+    font-size: 18px;
+    font-weight: bold;
+}
+#requestsend #paragraft h2 li{
+    padding-left: 20px;
+    font-size: 18px;
+    font-weight: bold;
+}
+#requestsend #paragraft2 #permintaan{
+    display: flex;
+    flex-direction: row;
+}#requestsend #paragraft2 #permintaan #border {
+    z-index: -1;
+}
+#requestsend #paragraft2 #permintaan h1{
+    padding-top: 10px;
+    padding-left: 200px;
+    font-size: 24px;
+    font-weight: bold;
+}
+#requestsend #paragraft2 h2{
+    padding-left: 200px;
+    font-size: 18px;
 }
