--- a/public/style.css
+++ b/public/style.css
@@ -734,13 +734,10 @@ div.descWhy {
     width: 90%;
 }
 
-#login .form{
-    margin-top: 40vh;
-}
-
 #login .btn{
     margin-left: 6.1vw;
     padding: 0.375rem 3.75rem;
+    border-radius: 0.6rem;
 }
 
 #login .box-login{
@@ -772,7 +769,16 @@ button, input, optgroup, select, textarea {
     border-color: #18a4fc;
 }
 
-/* Sign Up =============================================================================================== */
+#login .box-login .box-akun{
+    padding-top: 2vh;
+    padding-left: 6vw;
+}
+#login .box-login .box-akun a{
+    text-decoration-color: black;
+    color: black;
+}
+
+/* Recovery =============================================================================================== */
 #recovery{
     padding-top: 150px;
     display: flex;
@@ -782,7 +788,61 @@ button, input, optgroup, select, textarea {
     padding-left: 350px;
 }
 
-/* Recovery =============================================================================================== */
+#recovery .btn{
+    margin-left: 5.8vw;
+    padding: 0.375rem 3.75rem;
+    border-radius: 0.6rem;
+}
+
+#recovery .box-login{
+    margin-top: 10vh;
+    margin-left: 25vw;
+}
+
+#recovery .col-sm-10{
+    padding-right: 10vw;
+}
+
+#recovery .form-control{
+    padding: 0.5vh;
+    padding-right: 6vw;
+    border: 2px solid #18a4fc;
+    border-radius: 0.6rem;
+}
+
+#recovery .col-form-label{
+    font-family: Nunito;
+    font-weight: bold;
+}
+button, input, optgroup, select, textarea {
+    font-family: Nunito;
+}
+#recovery .btn-primary{
+    background-color: #18a4fc;
+    font-weight: bold;
+    border-color: #18a4fc;
+}
+
+#recovery .box-login .box-akun{
+    padding-top: 2vh;
+    padding-left: 6vw;
+}
+
+#recovery .box-login .box-akun span{
+    text-decoration: underline;
+}
+
+#recovery .text-recovery{
+    padding-left: 5.6vw;
+    padding-bottom: 2vh;
+}
+
+#recovery .box-login .box-akun a{
+    text-decoration-color: black;
+    color: black;
+}
+
+/* Sign Up =============================================================================================== */
 #signup{
     padding-top: 150px;
     display: flex;
@@ -792,27 +852,108 @@ button, input, optgroup, select, textarea {
     padding-left: 350px;
 }
 
+#signup .btn{
+    margin-left: 6.1vw;
+    padding: 0.375rem 3.75rem;
+    border-radius: 0.6rem;
+}
+
+#signup .box-login{
+    margin-top: 10vh;
+    margin-left: 25vw;
+}
+
+#signup .col-sm-10{
+    padding-right: 10vw;
+}
+
+#signup .form-control{
+    padding: 0.5vh;
+    padding-right: 6vw;
+    border: 2px solid #18a4fc;
+    border-radius: 0.6rem;
+}
+
+#signup .col-form-label{
+    font-family: Nunito;
+    font-weight: bold;
+}
+button, input, optgroup, select, textarea {
+    font-family: Nunito;
+}
+#signup .btn-primary{
+    background-color: #18a4fc;
+    font-weight: bold;
+    border-color: #18a4fc;
+}
+#signup .box-login .box-akun{
+    padding-top: 2vh;
+    padding-left: 6vw;
+}
+#signup .box-login .box-akun h6{
+    color: black;
+}
+
+#signup .box-login .box-akun a{
+    text-decoration-color: black;
+    color: black;
+}
 /* Recoverysend =============================================================================================== */
 #recoverysend{
     padding-top: 150px;
     display: flex;
 }
-#recoverysend #image{
-    width: 50px;
-    padding-left: 350px;
+#recoverysend img{
+    padding-left: 300px;
+    width: 50%;
+}
+#recoverysend #text h1{
+    font-size: 24px;
+    font-weight: bold;
+    padding-top: 50px;
+    padding-left: 200px;
+}
+#recoverysend #text h2{
+    font-size: 24px;
+    padding-top: 30px;
+    padding-left: 200px;
+    font-family: Nunito;
+    font-weight: 400;
+}
+#recoverysend #text h3{
+    font-size: 24px;
+    padding-left: 200px;
+    font-style: normal;
+    font-family: Nunito;
+    font-weight: 400;
+}
+#recoverysend #text #button{
+    display: inline-block;
+    background: #18a4fc;
+    color: #fff;
+    font-weight: bold;
+    font-size: 17px;
+    padding: 5px 20px;
+    margin-top: 20px;
+    margin-left: 200px;
+    border-radius: 6px;
+    border: 2px solid #18a4fc;
+    transition: all 0.3s ease;
 }
 /* Requestsend =============================================================================================== */
 #requestsend{
     padding-top: 120px;
     display: flex;
+    height: 500px;
 }
 #requestsend #paragraft h1{
-    padding-left: 130px;
+    padding-top: 80px;
+    padding-left: 80px;
     font-size: 24px;
     font-weight: bolder;
 }
 #requestsend #paragraft h2{
-    padding-left: 130px;
+    padding-left: 80px;
     font-size: 18px;
     font-weight: bold;
 }
@@ -821,19 +962,47 @@ button, input, optgroup, select, textarea {
     font-size: 18px;
     font-weight: bold;
 }
+#requestsend #paragraft2 #border img{
+    z-index: -1;
+    position: absolute;
+    width: 50%;
+    padding-left: 40px;
+}
 #requestsend #paragraft2 #permintaan{
     display: flex;
     flex-direction: row;
-}#requestsend #paragraft2 #permintaan #border {
-    z-index: -1;
+    margin-left: 420px;
+    margin-top: 65px;
 }
 #requestsend #paragraft2 #permintaan h1{
     padding-top: 10px;
     padding-left: 200px;
     font-size: 24px;
     font-weight: bold;
+    position: absolute;
+    top: 40%;
+    left: 38%;
 }
+
 #requestsend #paragraft2 h2{
     padding-left: 200px;
     font-size: 18px;
+    position: absolute;
+    top: 50%;
+    left: 38%;
+}
+#requestsend #paragraft2 h3{
+    padding-left: 200px;
+    font-size: 18px;
+    position: absolute;
+    top: 55%;
+    left: 38%;
+}
+#requestsend #paragraft2 h4{
+    padding-left: 200px;
+    font-size: 18px;
+    position: absolute;
+    top: 60%;
+    left: 38%;
+
 }
