--- a/public/style.css
+++ b/public/style.css
@@ -401,6 +401,10 @@ div.descWhy {
     font-weight: bold;
 }
 
+.accordion-button:not(.collapsed) {
+    background-color: white;
+}
+
 /* Page Paket =======================================================================================================================*/
 
 #PaketLaundry #Paragraft{
@@ -1170,7 +1174,6 @@ button, input, optgroup, select, textarea {
 
 #pickup .form-control{
     padding: 0.5vh;
-    padding-right: 6vw;
     border: 2px solid #18a4fc;
     border-radius: 0.6rem;
 }
@@ -1195,3 +1198,165 @@ button, input, optgroup, select, textarea {
     margin-left: -2.2vw;
     margin-bottom: -2vh;
 }
+
+/* ini paymenttt ======================================================================================*/
+
+#payment #paymentbox1 h1{
+    font-weight: bolder;
+}
+
+#payment #paymentbox2 #button{
+    display: inline-block;
+    background: #18a4fc;
+    color: #fff;
+    font-weight: bold;
+    font-size: 17px;
+    padding: 5px 20px;
+    margin-top: 20px;
+    border-radius: 6px;
+    border: 2px solid #18a4fc;
+    transition: all 0.3s ease;
+}
+
+/* ini payment membership ============================================================================= */
+
+#paymentmembership{
+    display: flex;
+    flex-direction: column;
+}
+
+#paymentmembership #paymentbox1 h1{
+    font-weight: bolder;
+}
+
+#paymentmembership #paymentbox2 #button{
+    display: inline-block;
+    background: #18a4fc;
+    color: #fff;
+    font-weight: bold;
+    font-size: 17px;
+    padding: 5px 20px;
+    margin-top: 20px;
+    border-radius: 6px;
+    border: 2px solid #18a4fc;
+    transition: all 0.3s ease;
+    margin-right: 22vw;
+}
+
+#paymentmembership #paymentbox1 .kotak{
+    align-items: center;
+    border-radius: 10px;
+    border: 4px solid #18a4fc;
+    width: 40vw;
+    height: 150px;
+    padding: 20px;
+    background-color: white;
+}
+
+#paymentmembership #paymentbox2 .kotak{
+    align-items: center;
+    border-radius: 10px;
+    border: 4px solid #18a4fc;
+    width: 40vw;
+    height: 250px;
+    padding: 20px;
+    background-color: white;
+}
+
+#paymentmembership #paymentbox2 .kotak #button{
+    display: flex;
+    flex-direction: row;
+}
+
+/* laundryku ===========================================================================================*/
+#accordionLaundryku {
+    width: 65vw;
+    margin-left: 17.5vw;
+}
+
+#accordionButton{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+#accordionButton #button{
+    display: inline-block;
+    background: #18a4fc;
+    color: #fff;
+    font-weight: bold;
+    font-size: 17px;
+    padding: 10px 20px;
+    border-radius: 6px;
+    border: 2px solid #18a4fc;
+    transition: all 0.3s ease;
+}
+
+#accordionButton #button{
+    display: inline-block;
+    background: #18a4fc;
+    color: #fff;
+    font-weight: bold;
+    font-size: 17px;
+    padding: 10px 20px;
+    border-radius: 6px;
+    border: 2px solid #18a4fc;
+    transition: all 0.3s ease;
+}
+
+#accordionLaundryku h2{
+    font-weight: bolder;
+}
+
+#accordionLaundryku h6{
+    font-weight: bold;
+}
+
+#accordionJudul{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+#accordionHarga{
+    font-weight: bold;
+    text-align: right;
+}
+
+.accordionL{
+    align-items: center;
+    border-radius: 10px;
+    border: 2px solid #18a4fc;
+    width: 65vw;
+    height: 60px;
+    padding: 20px;
+    background-color: white;
+}
+
+.active, .accordionL:hover {
+    border: 3px solid #18a4fc;
+}
+
+  .accordionL:after {
+    /* content: '\002B'; */
+    font-weight: bold;
+    float: right;
+    margin-left: 5px;
+  }
+
+  .active:after {
+    /* content: "\2212"; */
+  }
+
+  .panel {
+    margin-top: 10px;
+    padding: 0 18px;
+    background-color: white;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
+    width: 65vw;
+    align-items: center;
+  }
+
+
