--- a/public/style.css
+++ b/public/style.css
@@ -1130,29 +1130,29 @@ button, input, optgroup, select, textarea {
     margin-left: 550px;
     margin-top: 65px;
 }
-#pickup#paragraft2 h1{
+#pickup #paragraft2 h1{
     padding-top: 10px;
     padding-left: 100px;
     font-size: 24px;
     font-weight: bold;
     position: absolute;
-    top: 25%;
-    left: 25%;
+    left: 45%;
+    top: 35%;
 }
 
 #pickup #paragraft2 h2{
     padding-left: 50px;
     font-size: 18px;
     position: absolute;
-    top: 53%;
-    left: 53%;
+    top: 45%;
+    left: 48.5%;
 }
 #pickup #paragraft2 h3{
     padding-left: 50px;
     font-size: 18px;
     position: absolute;
-    top: 58%;
-    left: 53%;
+    top: 50%;
+    left: 48.5%;
 }
 
 #pickup .box-login{
@@ -1193,7 +1193,32 @@ button, input, optgroup, select, textarea {
     margin-bottom: -2vh;
 }
 
+#pickup #paragraft2 #button {
+    display: inline-block;
+    background: #18a4fc;
+    color: #fff;
+    font-weight: bold;
+    font-size: 17px;
+    padding: 5px 20px;
+    margin-top: 20px;
+    border-radius: 6px;
+    border: 2px solid #18a4fc;
+    transition: all 0.3s ease;
+    margin-right: 22vw;
+    position: absolute;
+    top: 60%;
+    left: 52%;
+}
+#pickup #paragraft2 #button{
+    display: flex;
+    flex-direction: row;
+}
+
 /* ini paymenttt ======================================================================================*/
+
+#payment{
+    display: flex;
+}
 
 #payment #paymentbox1 h1{
     font-weight: bolder;
@@ -1210,13 +1235,95 @@ button, input, optgroup, select, textarea {
     border-radius: 6px;
     border: 2px solid #18a4fc;
     transition: all 0.3s ease;
+    margin-left: 23vw;
+}
+
+#payment #paymentbox2 #button a {
+    margin-left: 0.8vw;
+}
+
+#payment #bayar{
+    padding-top: 3px;
+}
+
+#payment #paymentbox1 .kotak{
+    align-items: center;
+    border-radius: 10px;
+    border: 4px solid #18a4fc;
+    width: 40vw;
+    height: 180px;
+    padding: 20px;
+    background-color: white;
+    margin-top: 5vh;
+    margin-left: 3vw;
+    margin-right: 8vw;
+}
+
+#payment #paymentbox2 .kotak{
+    align-items: center;
+    border-radius: 10px;
+    border: 4px solid #18a4fc;
+    width: 40vw;
+    height: 300px;
+    padding: 20px;
+    background-color: white;
+    margin-top : 15.8vh;
+    margin-bottom: 5vh;
+}
+
+#payment #paymentbox1 #paragraf2{
+    margin-left: 3vw;
+    margin-top: 5vh;
+}
+
+#payment #paymentbox1 h1{
+    margin-left: 3vw;
+    margin-top: 5vh;
+}
+
+#payment #paymentbox2 .kotak #button{
+    display: flex;
+    flex-direction: row;
+}
+
+#payment #paymentbox2 #paragraf3{
+    text-align: left;
+    margin-right: 5vw;
+    /* margin-left: 22vw; */
+}
+
+#payment #paymentbox2 #paragraf2{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 61.5vw;
+    background-color: aqua;
+}
+
+#payment #paymentbox1 .kotak #paragraf h4 {
+    font-weight: bolder;
+}
+
+#payment #paymentbox1 .kotak #paragraf h6 {
+    font-weight: bolder;
+}
+
+#payment #paymentbox2 .kotak #paragraf1 h4 {
+    font-weight: bolder;
+}
+
+#payment #paymentbox2 .kotak #paragraf1 h6 {
+    font-weight: bolder;
+}
+
+#payment #paymentbox2 .kotak #paragraf2 h6 {
+    font-weight: bolder;
 }
 
 /* ini payment membership ============================================================================= */
 
 #paymentmembership{
     display: flex;
-    flex-direction: column;
 }
 
 #paymentmembership #paymentbox1 h1{
@@ -1234,7 +1341,8 @@ button, input, optgroup, select, textarea {
     border-radius: 6px;
     border: 2px solid #18a4fc;
     transition: all 0.3s ease;
-    margin-right: 22vw;
+    margin-right: 0vw;
+    margin-left: 23vw
 }
 
 #paymentmembership #paymentbox1 .kotak{
@@ -1245,6 +1353,9 @@ button, input, optgroup, select, textarea {
     height: 150px;
     padding: 20px;
     background-color: white;
+    margin-top: 5vh;
+    margin-left: 3vw;
+    margin-right: 8vw;
 }
 
 #paymentmembership #paymentbox2 .kotak{
@@ -1252,14 +1363,54 @@ button, input, optgroup, select, textarea {
     border-radius: 10px;
     border: 4px solid #18a4fc;
     width: 40vw;
-    height: 250px;
+    height: 350px;
     padding: 20px;
     background-color: white;
+    margin-top : 15.8vh;
+    margin-bottom: 5vh;
+}
+
+#paymentmembership #paymentbox1 #paragraf2{
+    margin-left: 3vw;
+    margin-top: 5vh;
+}
+
+#paymentmembership #paymentbox1 h1{
+    margin-left: 3vw;
+    margin-top: 5vh;
 }
 
 #paymentmembership #paymentbox2 .kotak #button{
     display: flex;
     flex-direction: row;
+}
+
+#paymentmembership #bayar{
+    padding-top: 3px;
+}
+
+#paymentmembership #paymentbox2 #button a {
+    margin-left: 0.8vw;
+}
+
+#paymentmembership #paymentbox1 .kotak #paragraf h4 {
+    font-weight: bolder;
+}
+
+#paymentmembership #paymentbox1 .kotak #paragraf h6 {
+    font-weight: bolder;
+}
+
+#paymentmembership #paymentbox2 .kotak #paragraf1 h4 {
+    font-weight: bolder;
+}
+
+#paymentmembership #paymentbox2 .kotak #paragraf1 h6 {
+    font-weight: bolder;
+}
+
+#paymentmembership #paymentbox2 .kotak #paragraf2 h6 {
+    font-weight: bolder;
 }
 
 /* laundryku ===========================================================================================*/
@@ -1353,4 +1504,25 @@ button, input, optgroup, select, textarea {
     align-items: center;
   }
 
-
+/* ini admin check order=============================================================================== */
+#admin {
+    display: flex;
+}
+#admin #flex img {
+    width: auto;
+    height: 15%;
+    position: absolute;
+    top: 5%;
+    left: 3%;
+}
+.judulku .kotak{
+    align-items: center;
+    border-radius: 10px;
+    border: 4px solid #18a4fc;
+    width: 100px;
+    height: 500px;
+    padding: 20px;
+    background-color: white;
+    margin-top : 10px;
+    margin-left: 30px;
+}
