--- a/public/style.css
+++ b/public/style.css
@@ -406,10 +406,16 @@ div.descWhy {
 }
 
 /* Page Paket =======================================================================================================================*/
+#PaketLaundry{
+    margin-left: 3.5vw;
+}
 
 #PaketLaundry #Paragraft{
     padding-top: 5vh;
     padding-left: 2vw;
+}
+#PaketLaundry #Paragraft h1{
+    font-weight: bolder;
 }
 #PaketLaundry #Barisan1{
     display: flex;
@@ -444,7 +450,7 @@ div.descWhy {
     font-family: Nunito;
     font-size: 20px;
 }
-#PaketLaundry #Barisan1 #Paket1 #PaketKomplit #harga #button{
+#PaketLaundry #Barisan1 #Paket1 #PaketKomplit #harga #button a{
     height: 50px;
     background: #18a4fc;
     color: #fff;
@@ -455,6 +461,11 @@ div.descWhy {
     border: 2px solid #18a4fc;
     transition: all 0.3s ease;
     cursor: pointer;
+    text-decoration: none;
+}
+#PaketLaundry #Barisan1 #Paket1 #PaketKomplit #harga #button a:hover{
+    color: #18a4fc;
+    background: none;
 }
 #PaketLaundry #Barisan1 #Paket2{
     display: flex;
@@ -484,7 +495,7 @@ div.descWhy {
     font-family: Nunito;
     font-size: 20px;
 }
-#PaketLaundry #Barisan1 #Paket2 #PaketSepatu #harga #button{
+#PaketLaundry #Barisan1 #Paket2 #PaketSepatu #harga #button a{
     height: 50px;
     background: #18a4fc;
     color: #fff;
@@ -495,6 +506,11 @@ div.descWhy {
     border: 2px solid #18a4fc;
     transition: all 0.3s ease;
     cursor: pointer;
+    text-decoration: none;
+}
+#PaketLaundry #Barisan1 #Paket2 #PaketSepatu #harga #button a:hover{
+    color: #18a4fc;
+    background: none;
 }
 #PaketLaundry #Barisan2{
     padding-top: 5vh;
@@ -530,7 +546,7 @@ div.descWhy {
     font-family: Nunito;
     font-size: 20px;
 }
-#PaketLaundry #Barisan2 #Paket3 #PaketBed #harga #button{
+#PaketLaundry #Barisan2 #Paket3 #PaketBed #harga #button a{
     height: 50px;
     background: #18a4fc;
     color: #fff;
@@ -541,6 +557,11 @@ div.descWhy {
     border: 2px solid #18a4fc;
     transition: all 0.3s ease;
     cursor: pointer;
+    text-decoration: none;
+}
+#PaketLaundry #Barisan2 #Paket3 #PaketBed #harga #button a:hover{
+    color: #18a4fc;
+    background: none;
 }
 #PaketLaundry #Barisan2 #Paket4{
     display: flex;
@@ -572,7 +593,7 @@ div.descWhy {
     font-family: Nunito;
     font-size: 20px;
 }
-#PaketLaundry #Barisan2 #Paket4 #PaketFormal #harga #button{
+#PaketLaundry #Barisan2 #Paket4 #PaketFormal #harga #button a{
     height: 50px;
     background: #18a4fc;
     color: #fff;
@@ -583,8 +604,12 @@ div.descWhy {
     border: 2px solid #18a4fc;
     transition: all 0.3s ease;
     cursor: pointer;
+    text-decoration: none;
 }
-
+#PaketLaundry #Barisan2 #Paket4 #PaketFormal #harga #button a:hover{
+    color: #18a4fc;
+    background: none;
+}
 /*PAGE TENTANG KAMI =======================================================================================*/
 
 .judul-tentangkami {
@@ -1104,7 +1129,7 @@ button, input, optgroup, select, textarea {
 #pickup #paragraft h1{
     padding-top: 80px;
     padding-left: 80px;
-    font-size: 24px;
+    font-size: 48px;
     font-weight: bolder;
 }
 #pickup #paragraft h2{
@@ -1120,9 +1145,9 @@ button, input, optgroup, select, textarea {
 #pickup #paragraft2 #border img{
     z-index: -1;
     position: absolute;
-    width: 80%;
+    width: 70%;
 
-    padding-left: 500px;
+    padding-left: 350px;
 }
 #pickup #paragraft2 #permintaan{
     display: flex;
@@ -1137,7 +1162,7 @@ button, input, optgroup, select, textarea {
     font-weight: bold;
     position: absolute;
     left: 45%;
-    top: 35%;
+    top: 33%;
 }
 
 #pickup #paragraft2 h2{
@@ -1373,6 +1398,10 @@ button, input, optgroup, select, textarea {
 #paymentmembership #paymentbox1 #paragraf2{
     margin-left: 3vw;
     margin-top: 5vh;
+
+}
+#paymentmembership #paymentbox2 #paragraf2{
+    display: flex;
 }
 
 #paymentmembership #paymentbox1 h1{
@@ -1412,7 +1441,11 @@ button, input, optgroup, select, textarea {
 #paymentmembership #paymentbox2 .kotak #paragraf2 h6 {
     font-weight: bolder;
 }
-
+#paymentmembership #paymentbox2 .kotak #paragraf2 h2 {
+    font-weight: bolder;
+    margin-left: 385px;
+    font-size: 17px;
+}
 /* laundryku ===========================================================================================*/
 #accordionLaundryku {
     width: 65vw;
@@ -1437,16 +1470,9 @@ button, input, optgroup, select, textarea {
     transition: all 0.3s ease;
 }
 
-#accordionButton #button{
-    display: inline-block;
-    background: #18a4fc;
-    color: #fff;
-    font-weight: bold;
-    font-size: 17px;
-    padding: 10px 20px;
-    border-radius: 6px;
-    border: 2px solid #18a4fc;
-    transition: all 0.3s ease;
+#accordionButton #button:hover{
+    color: #18a4fc;
+    background: none;
 }
 
 #accordionLaundryku h2{
@@ -1482,27 +1508,45 @@ button, input, optgroup, select, textarea {
     border: 3px solid #18a4fc;
 }
 
-  .accordionL:after {
-    /* content: '\002B'; */
+.accordionL:after {
     font-weight: bold;
     float: right;
     margin-left: 5px;
-  }
+}
 
-  .active:after {
-    /* content: "\2212"; */
-  }
-
-  .panel {
+.panel {
     margin-top: 10px;
-    padding: 0 18px;
+    padding: 0px 30px;
     background-color: white;
     max-height: 0;
     overflow: hidden;
     transition: max-height 0.2s ease-out;
     width: 65vw;
     align-items: center;
-  }
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+#statusL{
+    display: flex;
+    flex-direction: row
+}
+
+#statusLBold{
+    font-weight: bold;
+}
+
+#tanggalL{
+    display: flex;
+    flex-direction: row
+}
+
+#tanggalLBold{
+    font-weight: bold;
+}
+
 
 /* ini admin check order=============================================================================== */
 #admin {
@@ -1512,17 +1556,46 @@ button, input, optgroup, select, textarea {
     width: auto;
     height: 15%;
     position: absolute;
-    top: 5%;
+    top: 7%;
     left: 3%;
 }
 .judulku .kotak{
     align-items: center;
     border-radius: 10px;
-    border: 4px solid #18a4fc;
+    border: 3px solid #18a4fc;
     width: 100px;
-    height: 500px;
+    height: 85vh;
     padding: 20px;
     background-color: white;
-    margin-top : 10px;
+    margin-top : 30px;
     margin-left: 30px;
+}
+
+#admin .col-sm-10{
+    padding-right: 10vw;
+}
+
+#admin .form-control{
+    padding: 0.5vh;
+    padding-right: 0vw;
+    border: 2px solid #18a4fc;
+    border-radius: 0.4rem;
+    margin-right: 5vw;
+    width: 300px;
+}
+
+#admin .col-form-label{
+    font-family: Nunito;
+    font-weight: bold;
+}
+
+#admin select{
+    border: 2px solid #18a4fc;
+    border-radius: 5px;
+    font-family: nunito;
+}
+
+#admin #text{
+    display: flex;
+    flex-direction: row;
 }
