--- a/public/style.css
+++ b/public/style.css
@@ -248,7 +248,10 @@ section #homeLanding #button a{
     border-radius: 6px;
     border: 2px solid #18a4fc;
     transition: all 0.3s ease;
+    cursor: pointer;
+    text-decoration: none;
 }
+
 section #homeLanding #button a:hover{
     color: #18a4fc;
     background: none;
@@ -353,8 +356,9 @@ div.descWhy {
     border-radius: 6px;
     border: 2px solid #18a4fc;
     transition: all 0.3s ease;
+    cursor: pointer;
+    text-decoration: none;
 }
-
 #membership #button a:hover{
     color: #18a4fc;
     background: none;
@@ -664,7 +668,7 @@ div.descWhy {
     margin-top: -30vh;
 }
 
-.button-tentangkami-FAQ{
+.button-tentangkami-FAQ a{
     display: inline-block;
     background: #18a4fc;
     color: #fff;
@@ -677,9 +681,10 @@ div.descWhy {
     transition: all 0.3s ease;
     margin-left: 7vw;
     margin-top: 33vh;
+    cursor: pointer;
+    text-decoration: none;
 }
-
-.button-tentangkami-FAQ:hover{
+.button-tentangkami-FAQ a:hover{
     color: #18a4fc;
     background: none;
 }
@@ -702,6 +707,8 @@ div.descWhy {
     transition: all 0.3s ease;
     margin-left: 7vw;
     margin-bottom: 100px;
+    cursor: pointer;
+    text-decoration: none;
 }
 
 .button-tentangkami-contactus:hover{
@@ -1424,12 +1431,6 @@ button, input, optgroup, select, textarea {
     flex-direction: row;
 }
 
-#payment #paymentbox2 #paragraf3{
-    text-align: left;
-    margin-right: 5vw;
-    /* margin-left: 22vw; */
-}
-
 #payment #paymentbox2 #paragraf2{
     display: flex;
     flex-direction: row;
@@ -1587,7 +1588,7 @@ button, input, optgroup, select, textarea {
     justify-content: space-between;
 }
 
-#accordionButton #button{
+#accordionButton #button a{
     display: inline-block;
     background: #18a4fc;
     color: #fff;
@@ -1597,9 +1598,11 @@ button, input, optgroup, select, textarea {
     border-radius: 6px;
     border: 2px solid #18a4fc;
     transition: all 0.3s ease;
+    cursor: pointer;
+    text-decoration: none;
 }
 
-#accordionButton #button:hover{
+#accordionButton #button a:hover{
     color: #18a4fc;
     background: none;
 }
@@ -1747,7 +1750,7 @@ button, input, optgroup, select, textarea {
     height: 500px;
 }
 #paymentreceived img{
-    padding-left: 500px;
+    padding-left: 350px;
     width: 80%;
 }
 #paymentreceived #text #payment{
@@ -1773,7 +1776,7 @@ button, input, optgroup, select, textarea {
     font-family: Nunito;
     font-weight: 400;
 }
-#paymentreceived #text #button{
+#paymentreceived #text #button a{
     display: inline-block;
     background: #18a4fc;
     color: #fff;
@@ -1786,8 +1789,226 @@ button, input, optgroup, select, textarea {
     border: 2px solid #18a4fc;
     transition: all 0.3s ease;
     font-family: Nunito;
+    text-decoration: none;
+    cursor: pointer;
 }
-#paymentreceived #text #button:hover{
+#paymentreceived #text #button a:hover{
     color:  #18a4fc;
     background: none;
+}
+
+/* Responsive Paket=============================================================================== */
+
+@media(max-width: 769px){
+    #PaketLaundry{
+        margin-left: 3.5vw;
+    }
+
+    #PaketLaundry #Paragraft{
+        padding-top: 5vh;
+        padding-left: 2vw;
+    }
+    #PaketLaundry #Paragraft h1{
+        font-weight: bolder;
+        font-size: 45px;
+    }
+    #PaketLaundry #Barisan1{
+        display: flex;
+        flex-direction: column;
+    }
+    #PaketLaundry #Barisan1 #Paket1{
+        display: flex;
+    }
+    #PaketLaundry #Barisan1 #Paket1 .Foto1 img{
+        padding-top: 5vh;
+        max-width: 400px;
+    }
+    #PaketLaundry #Barisan1 #Paket1 #PaketKomplit h2{
+        padding-top: 5vh;
+        padding-left: 80px;
+        font-family: Nunito;
+        font-size: 40px;
+        font-weight: Bold;
+    }
+    #PaketLaundry #Barisan1 #Paket1 #PaketKomplit h3{
+        padding-left: 80px;
+        font-family: Nunito;
+        font-size: 25px;
+    }
+    #PaketLaundry #Barisan1 #Paket1 #PaketKomplit #harga{
+        display: flex;
+        align-items: center;
+        padding-top: 0vh;
+    }
+    #PaketLaundry #Barisan1 #Paket1 #PaketKomplit #harga h4{
+        padding-left: 80px;
+        padding-right:2vw;
+        font-family: Nunito;
+        font-size: 30px;
+    }
+    #PaketLaundry #Barisan1 #Paket1 #PaketKomplit #harga #button a{
+        height: 50px;
+        background: #18a4fc;
+        color: #fff;
+        font-weight: bold;
+        font-size: 20px;
+        padding: 5px 2vh;
+        border-radius: 6px;
+        border: 2px solid #18a4fc;
+        transition: all 0.3s ease;
+        cursor: pointer;
+        text-decoration: none;
+    }
+    #PaketLaundry #Barisan1 #Paket1 #PaketKomplit #harga #button a:hover{
+        color: #18a4fc;
+        background: none;
+    }
+    #PaketLaundry #Barisan1 #Paket2{
+        display: flex;
+    }
+    #PaketLaundry #Barisan1 #Paket2 .Foto2 img{
+        padding-top: 5vh;
+        padding-left: 5vw;
+        size: 40px;
+    }
+    #PaketLaundry #Barisan1 #Paket2 #PaketSepatu h2{
+        padding-top: 5vh;
+        padding-left: 30px;
+        font-family: Nunito;
+        font-size: 40px;
+        font-weight: Bold;
+    }
+    #PaketLaundry #Barisan1 #Paket2 #PaketSepatu h3{
+        padding-left: 30px;
+        font-family: Nunito;
+        font-size: 25px;
+    }
+    #PaketLaundry #Barisan1 #Paket2 #PaketSepatu #harga{
+        display: flex;
+        align-items: center;
+        padding-top: 0vh;
+    }
+    #PaketLaundry #Barisan1 #Paket2 #PaketSepatu #harga h4{
+        padding-left: 30px;
+        padding-right:2vw;
+        font-family: Nunito;
+        font-size: 30px;
+    }
+    #PaketLaundry #Barisan1 #Paket2 #PaketSepatu #harga #button a{
+        height: 50px;
+        background: #18a4fc;
+        color: #fff;
+        font-weight: bold;
+        font-size: 20px;
+        padding: 5px 2vh;
+        border-radius: 6px;
+        border: 2px solid #18a4fc;
+        transition: all 0.3s ease;
+        cursor: pointer;
+        text-decoration: none;
+    }
+    #PaketLaundry #Barisan1 #Paket2 #PaketSepatu #harga #button a:hover{
+        color: #18a4fc;
+        background: none;
+    }
+    #PaketLaundry #Barisan2{
+        padding-top: 5vh;
+        display: flex;
+        flex-direction: column;
+    }
+    #PaketLaundry #Barisan2 #Paket3{
+        display: flex;
+    }
+    #PaketLaundry #Barisan2 #Paket3 .Foto3 img{
+        padding-top: 5vh;
+        size: 40px;
+    }
+    #PaketLaundry #Barisan2 #Paket3 #PaketBed h2{
+        padding-top: 5vh;
+        padding-left: 50px;
+        font-family: Nunito;
+        font-size: 40px;
+        font-weight: Bold;
+    }
+    #PaketLaundry #Barisan2 #Paket3 #PaketBed h3{
+
+        padding-left: 50px;
+        font-family: Nunito;
+        font-size: 25px;
+    }
+    #PaketLaundry #Barisan2 #Paket3 #PaketBed #harga{
+        display: flex;
+        align-items: center;
+        padding-top: 0vh;
+    }
+    #PaketLaundry #Barisan2 #Paket3 #PaketBed #harga h4{
+        padding-left: 50px;
+        padding-right:2vw;
+        font-family: Nunito;
+        font-size: 30px;
+    }
+    #PaketLaundry #Barisan2 #Paket3 #PaketBed #harga #button a{
+        height: 50px;
+        background: #18a4fc;
+        color: #fff;
+        font-weight: bold;
+        font-size: 20px;
+        padding: 5px 2vh;
+        border-radius: 6px;
+        border: 2px solid #18a4fc;
+        transition: all 0.3s ease;
+        cursor: pointer;
+        text-decoration: none;
+    }
+    #PaketLaundry #Barisan2 #Paket3 #PaketBed #harga #button a:hover{
+        color: #18a4fc;
+        background: none;
+    }
+    #PaketLaundry #Barisan2 #Paket4{
+        display: flex;
+    }
+    #PaketLaundry #Barisan2 #Paket4 .Foto4 img{
+        padding-top: 5vh;
+        size: 40px;
+    }
+    #PaketLaundry #Barisan2 #Paket4 #PaketFormal h2{
+        padding-top: 5vh;
+        padding-left: 40px;
+        font-family: Nunito;
+        font-size: 40px;
+        font-weight: Bold;
+    }
+    #PaketLaundry #Barisan2 #Paket4 #PaketFormal h3{
+        padding-left: 40px;
+        font-family: Nunito;
+        font-size: 25px;
+    }
+    #PaketLaundry #Barisan2 #Paket4 #PaketFormal #harga{
+        display: flex;
+        align-items: center;
+        padding-top: 0vh;
+    }
+    #PaketLaundry #Barisan2 #Paket4 #PaketFormal #harga h4{
+        padding-left: 40px;
+        padding-right:2vw;
+        font-family: Nunito;
+        font-size: 30px;
+    }
+    #PaketLaundry #Barisan2 #Paket4 #PaketFormal #harga #button a{
+        height: 50px;
+        background: #18a4fc;
+        color: #fff;
+        font-weight: bold;
+        font-size: 20px;
+        padding: 5px 2vh;
+        border-radius: 6px;
+        border: 2px solid #18a4fc;
+        transition: all 0.3s ease;
+        cursor: pointer;
+        text-decoration: none;
+    }
+    #PaketLaundry #Barisan2 #Paket4 #PaketFormal #harga #button a:hover{
+        color: #18a4fc;
+        background: none;
+    }
 }
