--- a/public/style.css
+++ b/public/style.css
@@ -80,7 +80,7 @@ section#sectionNavbar .navbar #buttonDaftar a{
 }
 /* USER DROPDOWNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNN */
 .itemdropdown{
-    position: fixed;
+    position: absolute;
     top: 20px;
     right: 30px
 }
@@ -96,14 +96,14 @@ section#sectionNavbar .navbar #buttonDaftar a{
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: 80%;
+    height: 80%;
     object-fit: cover;
 }
 .itemdropdown .menu-profile{
     position: absolute;
-    top: 80px;
-    right: -10px;
+    top: 50px;
+    right: 0px;
     padding: 10px 20px;
     background: whitesmoke;
     width: 200px;
